# dynamantic

./: .env.test  .pylintrc  LICENSE  pyproject.toml
src/dynamantic/: __hello__.py  __init__.py  attrs.py  batch.py  context.py  exceptions.py  expressions.py  indexes.py  main.py  transactions.py  types.py
tests/: conftest.py  test_batch.py  test_condition.py  test_main.py  test_operations.py  test_query.py  test_save.py  test_scan.py  test_transactions.py  test_types.py
